--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ body {
   padding: 16px 32px;
   align-items: flex-start;
   gap: 10px;
+  cursor: pointer;
 }
 
 .button_text {
@@ -228,6 +229,7 @@ body {
   background: var(--ocean, #404bbf);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08),
     0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .btn_portfolio_text {
@@ -249,6 +251,7 @@ body {
   border-radius: 4px;
   border: 1px solid var(--cornflower, #e7e9fc);
   background: var(--cloud, #f4f4fd);
+  cursor: pointer;
 }
 
 .button_portfolio_text {
