--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ body {
   text-transform: uppercase;
   font-style: normal;
   color: var(--iris);
+  text-decoration: none;
 }
 
 .studio {
@@ -218,13 +219,14 @@ body {
 
 .studio_footer {
   color: var(--cloud);
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 800;
-  line-height: 21px; /* 116.667% */
+  line-height: 1.17; /* 116.667% */
   letter-spacing: 0.54px;
   text-transform: uppercase;
+  text-decoration: none;
 }
 
 .section_portfolio {
