--- a/css/styles.css
+++ b/css/styles.css
@@ -16,15 +16,15 @@ body {
 }
 
 .web {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  font-style: normal;
-  color: var(--iris);
-  text-decoration: none;
+    color: var(--iris, #4D5AE5);
+    font-family: "Raleway";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 1.17; /* 116.667% */
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
+    width: 44px;
 }
 
 .web :hover,
