--- a/css/styles.css
+++ b/css/styles.css
@@ -288,8 +288,8 @@ body {
   letter-spacing: 0.04em;
 }
 
-.btn_portfolio:hover,
-.btn_portfolio:focus {
+.button_portfolio:hover,
+.button_portfolio:focus {
   color: var(--ultrawhite);
 }
 
