--- a/css/styles.css
+++ b/css/styles.css
@@ -257,7 +257,7 @@ body {
   line-height: 1.17; /* 116.667% */
   letter-spacing: 0.54px;
   text-transform: uppercase;
-
+  text-decoration: none;
 }
 
 .section_portfolio {
