--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ body {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   width: 44px;
+  text-decoration: none;
 }
 
 .logo :hover,
@@ -47,6 +48,7 @@ body {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   width: 71px;
+  text-decoration: none;
 }
 
 .address {
