--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 }
 
 body {
- font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -20,21 +20,8 @@ body {
   color: #434455;
 }
 
-.logo {
-    color: var(--iris, #4d5ae5);
-    font-family: 'Raleway', sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 1.17; /* 116.667% */
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-    width: 44px;  
-    text-decoration: none;
-}
-
-.logo :hover,
-.logo :focus {
+.link:hover,
+.link :focus {
   color: var(--ocean);
 }
 
@@ -69,6 +56,16 @@ body {
 
 .link {
   text-decoration: none;
+  color: var(--iris, #4d5ae5);
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+  width: 44px;
+  text-decoration: none;
 }
 
 .list {
@@ -87,6 +84,10 @@ body {
 .navigation:hover,
 .navigation:focus {
   color: var(--ocean);
+}
+
+.button_nav {
+  text-decoration: none;
 }
 
 .header {
@@ -305,6 +306,10 @@ body {
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.64px;
+}
+
+.section_img {
+  text-decoration: none;
 }
 
 .portfolio_title {
