--- a/css/styles.css
+++ b/css/styles.css
@@ -270,11 +270,11 @@ body {
   padding: 12px 24px;
   align-items: flex-start;
   border-radius: 4px;
-  background-color: var(--ocean);
+  background-color: var(--ultrawhite);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08),
     0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  color: var(--white);
+  color: var(--iris);
   text-align: center;
   font-size: 16px;
   font-style: normal;
