--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,7 @@ body {
   padding: 12px 24px;
   align-items: flex-start;
   border-radius: 4px;
-  background-color: var(--ultrawhite);
+  background-color: var(--cloud);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08),
     0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   cursor: pointer;
@@ -287,7 +287,7 @@ body {
 
 .btn_portfolio:hover,
 .btn_portfolio:focus {
-  color: var(--ultrawhite);
+  background-color: var(--ocean);
 }
 
 .button_portfolio {
