--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 }
 
 body {
- font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -21,16 +21,15 @@ body {
 }
 
 .logo {
-    color: var(--iris, #4d5ae5);
-    font-family: 'Raleway', sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 1.17; /* 116.667% */
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-    width: 44px;  
-    text-decoration: none;
+  color: var(--iris, #4d5ae5);
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
 .logo :hover,
@@ -47,8 +46,11 @@ body {
   line-height: 1.17; /* 116.667% */
   letter-spacing: 0.54px;
   text-transform: uppercase;
-  width: 71px;
   text-decoration: none;
+}
+
+.header_address {
+  font-style: normal;
 }
 
 .address {
@@ -91,16 +93,11 @@ body {
 }
 
 .header {
-  width: 1440px;
-  height: 72px;
   flex-shrink: 0;
-  border-bottom: 1px var(--cornflower);
   background: var(--white);
 }
 
 .section_one {
-  width: 1440px;
-  height: 600px;
   flex-shrink: 0;
   background: var(--navyblue);
 }
@@ -114,17 +111,10 @@ body {
   font-weight: 700;
   line-height: 1.07; /* 107.143% */
   letter-spacing: 0.02em;
-  width: 496px;
 }
 
 .section_one_button {
-  display: inline-flex;
-  padding: 16px 32px;
-  align-items: flex-start;
-  gap: 10px;
-  border-radius: 4px;
   background-color: var(--iris);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   color: var(--ultrawhite);
   font-size: 16px;
@@ -140,8 +130,6 @@ body {
 }
 
 .section_two {
-  width: 1440px;
-  height: 2592px;
   background: var(--white);
 }
 
@@ -158,7 +146,6 @@ body {
   font-weight: 500;
   line-height: 1.2; /* 120% */
   letter-spacing: 0.4px;
-  width: 264px;
 }
 
 .section_two_paragraph {
@@ -169,7 +156,6 @@ body {
   font-weight: 400;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
-  width: 264px;
 }
 
 .section_three_name {
@@ -186,8 +172,6 @@ body {
 
 .section_four {
   background: var(--cloud);
-  width: 1440px;
-  height: 732px;
   flex-shrink: 0;
   background-color: var(--cloud);
 }
@@ -232,8 +216,6 @@ body {
 
 .footer {
   background: var(--navyblue);
-  width: 1440px;
-  height: 312px;
   flex-shrink: 0;
 }
 
@@ -261,20 +243,13 @@ body {
 }
 
 .section_portfolio {
-  width: 1440px;
-  height: 2076px;
   background: var(--white);
 }
 
 .btn_portfolio {
-  font-family: "Roboto", sans-serif;
-  display: flex;
-  padding: 12px 24px;
-  align-items: flex-start;
+  font-family: 'Roboto', sans-serif;
   border-radius: 4px;
   background-color: var(--cloud);
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08),
-    0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   color: var(--iris);
   text-align: center;
@@ -288,14 +263,11 @@ body {
 .btn_portfolio:hover,
 .btn_portfolio:focus {
   background-color: var(--ocean);
+  color: var(--ultrawhite);
 }
 
 .button_portfolio {
-  display: flex;
-  padding: 12px 24px;
   justify-content: center;
-  align-items: center;
-  border-radius: 4px;
   border: 1px var(--cornflower);
   background: var(--cloud);
   cursor: pointer;
